# zed-ros2-description

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
launch/: zed_viz.launch.py
meshes/: zedx.stl  zedxm.stl
rviz2/: zed_description.rviz
urdf/: zed_descr.urdf.xacro  zed_macro.urdf.xacro
