<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>zed_description</name>
  <version>0.1.1</version>
  <description>Contains URDF and meshes to create models of Stereolabs ZED Cameras.</description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <maintainer email="walter.lucetti@stereolabs.com">Walter Lucetti</maintainer>
  <maintainer email="aymeric.dujardin@stereolabs.com">Aymeric Dujardin</maintainer>
  <maintainer email="olivier.braun@stereolabs.com">Olivier Braun</maintainer>
  <maintainer email="pierre.yver@stereolabs.com">Pierre Yver</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://www.stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
